# smart-pandoc-debugger

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Coordinator.py  FAST-TODO.md  HACKATHON.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  MANIFEST.in  MVP_TODO.md  NEXT_VERSION_TODOS.md  README.md  TECHNICAL_ROADMAP.md  TESTING.md  conftest.py  context_viewer.sh  coordinator.sh  coordinator_debug.json  debug_input.py  debug_pattern.py  debug_patterns.py  h1_tests.sh  h2_tests.sh  intake.py  investigator.sh  main.sh  miner.sh  mkdocs.yml  oracle.sh  proofreader.sh  ptest.sh  pyproject.toml  pytest.ini  readme.md  reporter.sh  requirements.txt  respond_to_comment.py  run_intake.sh  (+11 more)
DEBUG_error_finder/: __init__.py  error_finder.py  run_error_finder_tests.py  test_error_finder.py  test_error_finder_comprehensive.py  test_error_finder_consolidated.py  test_error_finder_unit.py
alternative-debugger/: README.md  pandoc-smart-debugger-alternative.py  pandoc_smart_debugger_alternative.py  test-alternative.py
archive/: coordinator.py  coordinator.sh  intake.sh
docs/: BRANCH_NAMING_AND_HOOKS.md
docs/css/: extra.css
docs/development/: global-hooks-cleanup-complete.md  pre-commit-cleanup.md  setup.md
docs/js/: extra.js
docs/roadmap/: README.md  V0.0.md  V1.0.md  V2.0.md  V99.md
managers/: Investigator.py  Miner.py  Oracle.py  README.md  Reporter.py  investigator_team
managers/investigator-team/: __init__.py  error_finder.py  error_finder_dev.py  missing_dollar_proofer.py  runaway_argument_proofer.py  undefined_command_proofer.py
managers/investigator-team/tex_proofer_team/: check_tex_unbalanced_braces.py  check_unbalanced_braces.awk  check_unmatched_inline_math.awk  check_unmatched_left_right.awk
managers/miner_team/: pandoc_tex_converter.py  tex_compiler.py
managers/miner_team/markdown_proofer_team/: check_markdown_unclosed_dollar.py
managers/oracle-team/: seer.py  seer_rules.yaml
managers/oracle_team/: seer.py
managers/reporter-team/: md_report_environment_issues.py  tex_report_unmatched_delimiters.py
managers/temps/: librarian.sh
oracle-team/: seer.sh
scripts/: check_branch.py  cleanup-global-hooks.sh  setup-pre-commit.sh  setup_git_hooks.py
scripts/hooks/: check-alternative-imports.py  check-file-size.py  protect-roadmap.py  run-tier1-tests.py
src/smart_pandoc_debugger/: Coordinator.py  __init__.py  data_model.py  main.py
src/smart_pandoc_debugger/commands/: test_command.py
test_cases/: missing_dollar.md
tests/: README.md  TESTING.md  __init__.py  base.py  config.py  conftest.py  test_utils.py  utils.py
tests/data/: sample_document.md  test_cases.yaml
tests/e2e/: test_cli_workflow.py  test_end_to_end.py  test_markdown_processing.py
tests/e2e/test_cases/: __init__.py
tests/error_finder/: .coverage  __init__.py  conftest.py  pyproject.toml
tests/integration/: test_integration.py  test_pipeline_flow.py
tests/test_data/: __init__.py  error_document.md
tests/unit/: test_branch11.py  test_error_finder_consolidated.py  test_example.py  test_v1_roadmap_compliance.py
utils/: base_cli_manager.py  data_model.py  gh_api_client.py  logger_utils.py  manager_runner.py  pr_blockers.py  pr_response_helper.py  process_runner.py
(+72 files in other folders)
