[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-pandoc-debugger"
version = "0.0.0"
description = "A tool for debugging Pandoc and LaTeX errors"
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",  # Or your specific version requirement
    "PyYAML>=5.0"     # Or your specific version requirement
]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "coverage>=6.0.0",
]
dev = [
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "pylint>=2.12.0",
]

[project.scripts]
spd = "smart_pandoc_debugger.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=smart_pandoc_debugger --cov-report=term-missing"
markers = [
    "level1: marks tests as level 1 priority",
    "level2: marks tests as level 2 priority",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow to run",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.coverage.run]
source = ["smart_pandoc_debugger"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
