[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "debug-error-finder"
version = "0.1.0"
description = "Consolidated testing framework for error_finder"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
